# cs229-warao-NMT-optimization

./: .gitignore  README.md  pyproject.toml
data_exploration/: sentence_dict_builder.py  sentence_explorations.py  word_explorations.py  word_frequency.py
data_exploration/monolingual_data/utils/: postprocessing.py  split_monolingual.py
models/: expanding_embedding_matrix.py  extending_EM_full_FT.py  m2m_100_418m.py  m2m_100_418m_embedding_extended.py  tokenizer_training.py
models/encoder/: en_training_mlm_plm.py  merge_xlm_encoder_m2m_decoder.py
models/expanding_em/: eval_models.py  expanding_embedding_matrix.py  extending_EM_full_FT.py  extending_EM_full_FT_final.py  spanish_tokens.csv  warao_tokens.csv
models/expanding_em/utils/: bpe_tokenizer_training.py  convert_csv_to_txt.py  sentencepiece_tokenizer_training.py  trainer.py
models/utils/: tokenizer_training.py
