[project]
name = "cs229-warao-nmt-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "faiss-cpu>=1.13.0",
    "lmppl>=0.0.1",
    "matplotlib>=3.10.7",
    "pdfplumber>=0.11.8",
    "peft>=0.18.0",
    "plotly>=6.5.0",
    "protobuf>=6.33.1",
    "sacrebleu==2.0.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "umap-learn>=0.5.9.post2",
]
